--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 :root {
+  --header-bg: #270089;
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #5a5a5a;
+  --lightgrey: #9b9c9f;
+  --highlight: #3a7722;
+  --highlght-hover: #013b41;
+  --highlight-blue: #003068;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* @media (prefers-color-scheme: dark) {
+} */
+*{font-family: "Montserrat", sans-serif; font-size: 14px; outline: none; color: var(--foreground); font-weight: 500;}
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  /* background-image: url(/gaming.jpeg); */
+  background-color: #f0f2f5;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 * {
@@ -34,13 +34,20 @@ body {
   margin: 0;
 }
 
-a {
+a, button {
   color: inherit;
   text-decoration: none;
+  transition: .5s;
 }
-
-@media (prefers-color-scheme: dark) {
+.buttonSet:hover svg{fill: var(--highlight);}
+.userHover:hover *, .userHover:hover {
+  color: #003068;
+  transition: .5s;
+}
+.activeFriends, .activeFriends *{ color: var(--highlight-blue); font-weight: bold;}
+.activeFriends{ font-weight: 700; border-bottom:1px solid var(--highlight-blue);}
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
