--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,6 +129,32 @@ button.slick-arrow.slick-prev.slick-disabled {
   opacity: 0;
   cursor: none;
 }
+.mainReply, .innerReply {
+  position: relative;
+}
+
+.mainReply:before {
+  content: '';
+  width: 18px;
+  height: calc(100% - 7px);
+  position: absolute;
+  left: -25px;
+  top: 40px;
+  background: transparent;
+  border-left: 2px solid #e3e3e3;
+  border-bottom: 2px solid #e3e3e3;
+  border-radius: 0px 0px 0px 10px;
+}
+.innerReply:before{
+  content: '';
+  width: 0px;
+  height: calc(100% - 34px);
+  position: absolute;
+  left: 15px;
+  top: 40px;
+  background: transparent;
+  border-left: 2px solid #e3e3e3;
+}
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
