Add story Component 22-11-2024

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -274,3 +274,7 @@ label.customRadio input[type="radio"]:checked + span:before {
   opacity: 1;
   transform: scale(1) rotate(45deg);
 }
+
+/* .slick-arrow {
+  display: none !important;
+} */
