--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -274,7 +274,11 @@ label.customRadio input[type="radio"]:checked + span:before {
   opacity: 1;
   transform: scale(1) rotate(45deg);
 }
-
+/* message chat css */
+.messageSetInner ~ .w-full{display:none}
+.messageSetInner {
+  height: calc(100vh - 65px);
+}
 /* .slick-arrow {
   display: none !important;
 } */
