--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -334,3 +334,7 @@ label.customRadio input[type="radio"]:checked + span:before {
 /* .slick-arrow {
   display: none !important;
 } */
+
+.ql-editor {
+  display: flex !important;
+}
