--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,27 @@
 :root {
   --header-bg: #270089;
   --background: #ffffff;
-  --foreground: #5a5a5a;
+  --foreground: #a59cbd;
   --lightgrey: #9b9c9f;
   --highlight: #3e3976;
-  --highlght-hover: #7c71eb;
-  --highlight-blue: #3e3976;
+  --highlght-hover: #3e3976;
+  --highlight-blue: #7c71eb;
+  --bg:#1d1d35;
+  --sections:#191629;
+  --bgh:#252542;
+}
+.menuActiveSidebar{background: rgb(56,42,95);
+  background: -moz-linear-gradient(90deg, rgba(56,42,95,1) 50%, rgba(255,255,255,0) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(56,42,95,1) 50%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(90deg, rgba(56,42,95,1) 50%, rgba(255,255,255,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#382a5f",endColorstr="#ffffff",GradientType=1);}
+.headerGradient{
+  background: rgb(56,42,95);
+background: -moz-linear-gradient(0deg, rgba(56,42,95,1) 0%, rgba(255,255,255,0) 100%);
+background: -webkit-linear-gradient(0deg, rgba(56,42,95,1) 0%, rgba(255,255,255,0) 100%);
+background: linear-gradient(0deg, rgba(56,42,95,1) 0%, rgba(255,255,255,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#382a5f",endColorstr="#ffffff",GradientType=1);
+border-bottom:1px solid #493973;
 }
 .namellipse {
   white-space: nowrap;
@@ -51,8 +67,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   min-height: 100vh;
-  background-image: url(/bg.jpg);
-  background-color: #f0f2f5;
+  /* background-image: url(/bg1.jpg); */
+  background-color: var(--bg);
+  background: rgb(73,43,115);
+  background: -moz-radial-gradient(circle, rgba(73,43,115,1) 0%, rgba(29,29,53,1) 100%);
+  background: -webkit-radial-gradient(circle, rgba(73,43,115,1) 0%, rgba(29,29,53,1) 100%);
+  background: radial-gradient(circle, rgba(73,43,115,1) 0%, rgba(29,29,53,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#492b73",endColorstr="#1d1d35",GradientType=1);
+  /* background-color: #f0f2f5; */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -196,8 +218,8 @@ button.slick-arrow.slick-prev.slick-disabled {
   left: -25px;
   top: 40px;
   background: transparent;
-  border-left: 2px solid #e3e3e3;
-  border-bottom: 2px solid #e3e3e3;
+  border-left: 1px solid var(--foreground);
+  border-bottom: 1px solid var(--foreground);
   border-radius: 0px 0px 0px 10px;
 }
 .innerReply:before {
@@ -208,7 +230,7 @@ button.slick-arrow.slick-prev.slick-disabled {
   left: 15px;
   top: 40px;
   background: transparent;
-  border-left: 2px solid #e3e3e3;
+  border-left: 1px solid var(--foreground);
 }
 .checkboxSelected input:checked + div {
   background: #ffe7e7;
