--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,23 @@
   --sections:#191629;
   --bgh:#252542;
 }
+input[type="time"]::-webkit-calendar-picker-indicator, input[type="date"]::-webkit-calendar-picker-indicator{
+  filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(100%) contrast(0%);
+}
+.quill.postEditorText {
+  background: #0000004f;
+  border-radius: 12px !important;
+  border: 1px solid #ffffff1f;
+  margin-bottom: 5px;
+}
+
+.quill.postEditorText * {
+  border: none !important;
+}
+
+.quill.postEditorText button:hover * {
+  stroke: #3e3976 !important;
+}
 .menuActiveSidebar{background: rgb(56,42,95);
   background: -moz-linear-gradient(90deg, rgba(56,42,95,1) 50%, rgba(255,255,255,0) 100%);
   background: -webkit-linear-gradient(90deg, rgba(56,42,95,1) 50%, rgba(255,255,255,0) 100%);
@@ -480,4 +497,32 @@ section.stack.stack4 section span {
   justify-content: center;
   font-size: 30px;
   border-radius: 8px;
+}
+
+.uploaded-dataInner {
+  aspect-ratio: 1/1;
+  overflow: hidden;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ffffff30;
+  background: #ffffff;
+}
+
+.uploaded-dataInner:hover:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #00000054;
+  z-index: 1;
+  left: 0;
+  top: 0;
+}
+
+.uploaded-dataInner svg {
+  top: 6px;
+  right: 6px;
+  background: #302e3f;
+  padding: 3px;
 }
