like inner post comment 13-12-2024

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -545,3 +545,5 @@ section.stack.stack4 section span {
 .uploaded-media .media-item button:hover {
   background-color: red;
 }
+/* Add this to your CSS file (e.g., App.css) */
+
