--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -545,5 +545,15 @@ section.stack.stack4 section span {
 .uploaded-media .media-item button:hover {
   background-color: red;
 }
+
+
+.searchboxWrapper {
+  background-color: #fff;
+  border-radius: 0.3rem;
+  border: 1px solid #ddd;
+  display: inline-block;
+  padding: 15px;
+  box-shadow: 0 0.3rem 1rem rgba(8, 38, 78, 0.2);
+}
 /* Add this to your CSS file (e.g., App.css) */
 
